fixed alignment mobile nav

--- a/style.css
+++ b/style.css
@@ -176,6 +176,7 @@ Scroll
 /* navbar */
 nav {
   background: var(--primary-color);
+  /* background: green; */
   padding: 1rem 1.5rem;
 }
 /* fixed nav */
@@ -218,6 +219,10 @@ nav {
   transition: var(--transition);
 }
 
+.links {
+  padding: 0;
+}
+
 .links a {
   background: var(--clr-white);
   color: var(--clr-grey-5);
@@ -228,6 +233,7 @@ nav {
   transition: var(--transition);
   font-weight: bold;
   padding: 0.75rem 0;
+  padding-left: 20px;
 }
 .links a:hover {
   color: var(--clr-grey-1);
